test/should_fail/inh_model_009.gm
model inh_model_009;

edge class A extends B;
edge class B extends C;
edge class C extends A;
